--- a/cmd/server/.env.example
+++ b/cmd/server/.env.example
@@ -9,3 +9,4 @@ DB_NAME=<your_db_name>
 WEATHER_API_KEY=<your_key>
 #Open Weather Coordinate API
 CORDINATE_API_KEY=<your_key>
+SENDGRID_API_KEY=<you_key>
